@@ -1,3 +1,5 @@
+Fraction Matcher: Increased the size of the whole number in mixed fractions
+Fraction Matcher: Added sim sharing messages
 Fraction Matcher: Internationalized
 # 0.00.85 (65145) Jun 15, 2012
 Fraction Matcher: Only include levels 7-8 in the standalone Fraction Matcher, not in the Fractions Intro sim
